[package]
name = "cooplan-lapin-wrapper"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Lapin wrapper for making AMQP connections easier to manage in Cooplan's microservices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Async runtime
tokio = { version = "1", features = ["full"] }
async-recursion = "1.0"

lapin = "2.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]