[package]
name = "cooplan-lapin-wrapper"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Lapin wrapper for making AMQP connections easier to manage in Cooplan's microservices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Proprietary dependencies
cooplan-config-reader = "0.1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"
async-recursion = "1.0"

# AMQP
lapin = "2.1"

# Third party dependencies
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]